{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 28,
  "lineage": "358acfe5-242a-e25c-a789-9bc4acda0f70",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb_loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "ql-us-east-2-loadbalancer-logs",
                "enabled": true,
                "prefix": "test-222205-bstest5"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:259760847234:loadbalancer/app/ecs-test-222205-bstest5/6ca83982920577a6",
            "arn_suffix": "app/ecs-test-222205-bstest5/6ca83982920577a6",
            "dns_name": "ecs-test-222205-bstest5-2000175517.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:259760847234:loadbalancer/app/ecs-test-222205-bstest5/6ca83982920577a6",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecs-test-222205-bstest5",
            "security_groups": [
              "sg-0dd8ab7d50c8aaecf"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03dc7fde006535518"
              },
              {
                "subnet_id": "subnet-08aab82c4b582fe3e"
              },
              {
                "subnet_id": "subnet-09040ac2efded095d"
              }
            ],
            "subnets": [
              "subnet-03dc7fde006535518",
              "subnet-08aab82c4b582fe3e",
              "subnet-09040ac2efded095d"
            ],
            "tags": {
              "app-id": "222205",
              "development-team-email": "mck222@gmail.com",
              "environment": "test",
              "hal-app-id": "222205",
              "iac": "terraform",
              "infrastructure-engineer-email": "mck222@gmail.com",
              "infrastructure-team-email": "mck222@gmail.com",
              "module": "aws-ecs-app-tf"
            },
            "vpc_id": "vpc-0b20139ab8e425867",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.load_balancer",
            "data.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:259760847234:targetgroup/ecs-20210119161801604700000004/733a8dee02c81a69",
            "arn_suffix": "targetgroup/ecs-20210119161801604700000004/733a8dee02c81a69",
            "deregistration_delay": 10,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/healthcheck",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 4
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:259760847234:targetgroup/ecs-20210119161801604700000004/733a8dee02c81a69",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ecs-20210119161801604700000004",
            "name_prefix": "ecs-",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 30,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "app-id": "222205",
              "development-team-email": "mck222@gmail.com",
              "environment": "test",
              "hal-app-id": "222205",
              "iac": "terraform",
              "infrastructure-engineer-email": "mck222@gmail.com",
              "infrastructure-team-email": "mck222@gmail.com",
              "module": "aws-ecs-app-tf"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0b20139ab8e425867"
          },
          "dependencies": [
            "aws_alb.alb_loadbalancer",
            "aws_security_group.load_balancer",
            "data.aws_security_group.security_group"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:259760847234:listener/app/ecs-test-222205-bstest5/6ca83982920577a6/0e6bae50a0f3d1aa",
            "certificate_arn": "arn:aws:acm:us-east-2:259760847234:certificate/e5702242-dd14-4109-96c0-94eadcb51696",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:259760847234:targetgroup/ecs-20210119161801604700000004/733a8dee02c81a69",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:259760847234:listener/app/ecs-test-222205-bstest5/6ca83982920577a6/0e6bae50a0f3d1aa",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:259760847234:loadbalancer/app/ecs-test-222205-bstest5/6ca83982920577a6",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.alb_loadbalancer",
            "aws_alb_target_group.ecs",
            "aws_security_group.load_balancer",
            "data.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:259760847234:listener/app/ecs-test-222205-bstest5/6ca83982920577a6/6eae4febdf968075",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:259760847234:listener/app/ecs-test-222205-bstest5/6ca83982920577a6/6eae4febdf968075",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:259760847234:loadbalancer/app/ecs-test-222205-bstest5/6ca83982920577a6",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.alb_loadbalancer",
            "aws_security_group.load_balancer",
            "data.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default_eni",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:259760847234:security-group/sg-05d17de7296676907",
            "description": "For ECS containers for application test-222205-bstest5.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05d17de7296676907",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0dd8ab7d50c8aaecf"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "eni-ecs-test-222205-bstest520210119161549089800000002",
            "name_prefix": "eni-ecs-test-222205-bstest5",
            "owner_id": "259760847234",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bstest5",
              "app-id": "222205",
              "development-team-email": "mck222@gmail.com",
              "environment": "test",
              "hal-app-id": "222205",
              "iac": "terraform",
              "infrastructure-engineer-email": "mck222@gmail.com",
              "infrastructure-team-email": "mck222@gmail.com",
              "module": "aws-ecs-app-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b20139ab8e425867"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:259760847234:security-group/sg-0dd8ab7d50c8aaecf",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dd8ab7d50c8aaecf",
            "ingress": [
              {
                "cidr_blocks": [
                  "12.165.188.0/24",
                  "162.252.136.0/21"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "12.165.188.0/24",
                  "162.252.136.0/21"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "12.165.188.0/24",
                  "162.252.136.0/21"
                ],
                "description": "",
                "from_port": 81,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 81
              },
              {
                "cidr_blocks": [
                  "12.165.188.0/24",
                  "162.252.136.0/21"
                ],
                "description": "",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8443
              }
            ],
            "name": "alb-ecs-test-222205-bstest520210119161549081600000001",
            "name_prefix": "alb-ecs-test-222205-bstest5",
            "owner_id": "259760847234",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bstest5",
              "app-id": "222205",
              "development-team-email": "mck222@gmail.com",
              "environment": "test",
              "hal-app-id": "222205",
              "iac": "terraform",
              "infrastructure-engineer-email": "mck222@gmail.com",
              "infrastructure-team-email": "mck222@gmail.com",
              "module": "aws-ecs-app-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b20139ab8e425867"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_connections_from_cidr_blocks_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "12.165.188.0/24",
              "162.252.136.0/21"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-3883499492",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0dd8ab7d50c8aaecf",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.load_balancer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_connections_from_cidr_blocks_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "12.165.188.0/24",
              "162.252.136.0/21"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-2085386191",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0dd8ab7d50c8aaecf",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.load_balancer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_connections_from_cidr_blocks_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "12.165.188.0/24",
              "162.252.136.0/21"
            ],
            "description": "",
            "from_port": 8443,
            "id": "sgrule-2225899744",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0dd8ab7d50c8aaecf",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.load_balancer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_connections_from_cidr_blocks_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "12.165.188.0/24",
              "162.252.136.0/21"
            ],
            "description": "",
            "from_port": 81,
            "id": "sgrule-171011440",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0dd8ab7d50c8aaecf",
            "self": false,
            "source_security_group_id": null,
            "to_port": 81,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.load_balancer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ec2_allow_ingress_from_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 0,
            "id": "sgrule-4168345226",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-05d17de7296676907",
            "self": false,
            "source_security_group_id": "sg-0dd8ab7d50c8aaecf",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.default_eni",
            "aws_security_group.load_balancer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ec2_allow_outbound_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3270582621",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-05d17de7296676907",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.default_eni"
          ]
        }
      ]
    }
  ]
}